hphp/test/zend/good/tests/classes/autoload_010.php.expectf
In autoload: string(6) "UndefI"

Fatal error: Undefined interface: UndefI in %s/autoload_010.php on line 8
